...
	<string name="parental_controls">Parental Controls</string>
	<string name="privacy_tips">Privacy Tips</string>
	<string name="security_tips">Security Tips</string>
	
	<!-- Common -->
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="search">Search</string>
	<string name="close">Close</string>
	<string name="done">Done</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
...
